# exam_environment

./: CMakeLists.txt  main.c
compare/: CMakeLists.txt  compare.c  compare.h
datastructures/: CMakeLists.txt  datastructure_test.c  datastructures.c  datastructures.h
